# Secret-Bundestag-Server

./: .clang-tidy  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SecretBundestagServer.cbp  cmake_install.cmake  compile_commands.json  secretbundestagserver.deb  secretbundestagserver_1.0-1.deb
.github/workflows/: check.yml  deploy.yml  test.yml
package/: debian_control
src/: main.cpp
src/comm/: ConnectionHandler.cpp  ConnectionHandler.hpp  Lobby.cpp  Lobby.hpp  LobbyHandler.cpp  LobbyHandler.hpp  MessageHandler.cpp  MessageHandler.hpp
src/gamelogic/enum/: CardType.hpp  EventType.hpp  Fraction.hpp  Office.hpp  Role.hpp  TriggerComparator.hpp  TriggerCompositor.hpp
src/gamelogic/gamecontroller/: Controller.cpp  Controller.hpp
src/gamelogic/gamemodel/: AbstractEventTrigger.cpp  AbstractEventTrigger.hpp  Board.cpp  Board.hpp  CardRange.cpp  CardRange.hpp  Environment.cpp  Environment.hpp  EventTrigger.cpp  EventTrigger.hpp  GameStateRepresentation.cpp  GameStateRepresentation.hpp  Player.cpp  Player.hpp  RuleSet.cpp  RuleSet.hpp  SingleCardEventTrigger.cpp  SingleCardEventTrigger.hpp
src/messages/: Accept.cpp  Accept.hpp  Error.cpp  Error.hpp  GameEnd.cpp  GameEnd.hpp  GameStart.cpp  GameStart.hpp  GameState.cpp  GameState.hpp  GenericReply.cpp  GenericReply.hpp  JoinRequest.cpp  JoinRequest.hpp  Message.cpp  Message.hpp  OptionalSerializer.hpp  Player.cpp  Player.hpp  RequestDecision.cpp  RequestDecision.hpp  StartRequest.cpp  StartRequest.hpp
src/util/: ArgumentParser.cpp  ArgumentParser.hpp  IsType.hpp  Logging.cpp  Logging.hpp  RandomGenerator.cpp  RandomGenerator.hpp  Serializable.hpp
test/: CMakeLists.txt  CTestTestfile.cmake  CardRange.cpp  Environment.cpp  Makefile  Tests.cbp  cmake_install.cmake  main.cpp
test/gamelogic/gamemodel/: CardRange.cpp  Environment.cpp
test/messages/: Error.cpp  JoinRequest.cpp
